# xLH

./: README.md  pyproject.toml
docs/latex/src/: build.sh  build_postprocessor.py  build_preprocessor.py  preambel_beamer.tex  produktevorstellung.tex  xLH-io-base-sp-4.tex  xLH-io-base.tex  xLH-lx-base.tex  xLH-lx-power.tex
docs/latex/src/elements/beschreibungen/: xLH-io-base-sp-4_beschreibung.tex  xLH-io-base_beschreibung.tex  xLH-lx-base_beschreibung.tex  xLH-lx-power_beschreibung.tex
docs/latex/src/elements/features/: xLH-io-base-sp-4_features.tex  xLH-io-base_features.tex  xLH-lx-base_features.tex  xLH-lx-power_features.tex
latex/src/: 00_preambel.tex  01_datasheet_template.tex  01_main.tex  01_main_datasheet.tex  10_einleitung.tex  99_functions.tex  datasheet.cls  main.sh  preambel.tex  xLH-io-base-sp-4.tex  xLH-lx-base.tex  xLH-lx-power.tex
source/jupyterlite/: math_example.ipynb  rgb_base.ipynb  rgb_examples.ipynb
