[tool.poetry]
name = "xLH"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Pascal Helfenstein <pascal.helfenstein@xemax.ch>", "Thomas Ruoss <thomas.ruoss@xemax.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.2,<=3.12.9"
jinja2 = "^3.1.6"
pandas = "^2.3.1"
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"